logic allowing to create questions with options (+ styles)

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -10,3 +10,4 @@ $include-html-global-classes: $include-html-classes;
 @import 'foundation/components/forms';
 @import 'foundation/components/offcanvas';
 @import 'foundation/components/panels';
+@import 'foundation/components/top-bar';
