display chart on results page

--- a/app/views/dashboard/index.haml
+++ b/app/views/dashboard/index.haml
@@ -15,5 +15,5 @@
         .links
           = link_to_add_association 'Add option', f, :options, class: 'tiny button hollow primary', partial: 'options/fields'
         = f.error(:options)
-      = f.submit class: 'button'
+      = f.submit 'Save question', class: 'button success hollow'
 
