--- a/app/views/questions/show.haml
+++ b/app/views/questions/show.haml
@@ -1,12 +1,16 @@
 .expanded.row
-  .medium-12.large-12.columns
+  .medium-8.large-8.columns
     %h1= question.title
 
     - question.options.each do |option|
       = form_for :option, url: question_option_vote_path(question, option) do |f|
-        = f.submit(option.title, class: 'button success hollow')
+        .expanded.row
+          .medium-4.large-4.columns
+            = option.title
+          .medium-2.large-2.columns.end
+            = f.submit('Vote', class: 'tiny button success hollow')
 
     %p
-      = link_to 'Go to results', question_results_path(question), class: 'button'
+      = link_to 'See results', question_results_path(question), class: 'button secondary hollow'
     %p
       = link_to 'Back', root_path, class: 'button hollow'
