--- a/app/views/dashboard/index.haml
+++ b/app/views/dashboard/index.haml
@@ -1,6 +1,6 @@
 .expanded.row
   .medium-3.large-2.columns
-    %p Last questions
+    %p Recent questions
     %ul.menu
       - questions.each do |question|
         %li= link_to question.title, question_path(question)
